--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+push_swap_tester/
 txt/
 .gitignore
+test*
+visualizer
+checker_*
 
 #System files
 .DS_Store
@@ -21,3 +25,4 @@ txt/
 *.DSYM/
 
 #Readme files
+*.md
